Common/src/main/java/org/example/error/NoSuchIDException.java
package org.example.error;

public class NoSuchIDException extends RuntimeException{

}
